fix z-index in edit story

--- a/src/styles/create-story.less
+++ b/src/styles/create-story.less
@@ -1,5 +1,7 @@
 .create-story {
   &__text-editor {
+    position: relative;
+    z-index: 0;
     max-width: 1200px;
     margin: 0 auto;
     margin-top: 40px;
