--- a/src/styles/text-editor.less
+++ b/src/styles/text-editor.less
@@ -1,7 +1,3 @@
-.ltrs-editor .ltrs-sticky-top-bar {
-  z-index: 0;
-}
-
 .text-editor {
   display: flex;
   box-shadow: 0px 0px 20px rgba(184, 184, 184, 0.25);
